--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Anime Recommendations</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.11.4/sweetalert2.min.css">
   <link rel="stylesheet" href="main.css">
   <link rel="preload" href="images/close.png" as="image">
   <link rel="preload" href="images/empty-star.png" as="image">
   <link rel="preload" href="images/sample.jpg" as="image">
   <script src="https://cdn.jsdelivr.net/npm/matrix-factorization@1.1.2/index.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.11.4/sweetalert2.min.js" defer></script>
   <script src="helpers.js" defer></script>
   <script src="main.js" defer></script>
 </head>
